--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<body>
-    <a href="Battle1/Test/battle1.html">Battle 1</a>
-    <a href="Battle2/Test/battle2.html">Battle 2</a>
-    <a href="Battle3/Test/battle3.html">Battle 3</a>
-    <a href="Battle4/Test/battle4.html">Battle 4</a>
-    <a href="Battle5/Test/battle5.html">Battle 5</a>
-</body>
+<html>
+    
+    <body>
+        <h1>Assignment 1: Nigel Hardy</h1>
+        <h2>Battles</h2>
+        <a href="Battle1/Test/battle1.html">Battle 1</a>
+        <a href="Battle2/Test/battle2.html">Battle 2</a>
+        <a href="Battle3/Test/battle3.html">Battle 3</a>
+        <a href="Battle4/Test/battle4.html">Battle 4</a>
+        <a href="Battle5/Test/battle5.html">Battle 5</a>
+    </body>
+
+</html>
