Fixed back link, made it relative

--- a/Battle1/Test/battle1.html
+++ b/Battle1/Test/battle1.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <h1>Battle 1 (prototype)</h1>
-        <a href="/">Back to All</a>
+        <a href="../../">Back to All</a>
         <br>
         <button onclick="spawnBazooka()">Bazooka</button>
         <button onclick="spawnSword()">Sword</button>
