--- a/Battle2/Test/battle2.html
+++ b/Battle2/Test/battle2.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Battle 2 (update method)</h1>
-        <a href="/">Back to All</a>
+        <a href="../../">Back to All</a>
         <br>
         <button onclick="add_plant()">Add Plant</button>
         <div id="main"></div>
