--- a/Battle3/Test/battle3.html
+++ b/Battle3/Test/battle3.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Battle 3 (type object)</h1>
-        <a href="/">Back to All</a>
+        <a href="../../">Back to All</a>
         <br>
         <table>
             <tr>
