--- a/Battle4/Test/battle4.html
+++ b/Battle4/Test/battle4.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Battle 4 (service locator)</h1>
-        <a href="/">Back to All</a>
+        <a href="../../">Back to All</a>
         <br>
         <table>
             <tr>
