Fixed back link again

--- a/Battle5/Test/battle5.html
+++ b/Battle5/Test/battle5.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Battle 5 (object pool)</h1>
-        <a href="../../">Back to All</a>
+        <a href="../../index.html">Back to All</a>
         <br>
         <table>
             <tr><td><p>Activate Next Available Rock</p></td></tr>
